[tool.poetry]
name = "nightshiftdice"
version = "0.1.0"
description = "NighShiftDice dice-roller bot"
authors = ["Max Bussiere <max@3digit.dev>"]

[tool.poetry.scripts]
bot = "nightshiftdice.bot:main"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "1.6.0"
openai = "^0.27.2"
dacite = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
